--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,16 +10,17 @@ environment:
   LUAROCKS_URL: http://keplerproject.github.io/luarocks/releases
   LUAROCKS_REPO: http://rocks.moonscript.org
   LUAROCKS_VER: 2.2.1
+  LUAROCKS_SHORTV: 2.2
 
   matrix:
-  - LUA_VER: 5.3.0
-    LUA_SHORTV: 5.3
+  - LUA_VER: 5.1.5
+    LUA_SHORTV: 5.1
 
   - LUA_VER: 5.2.4
     LUA_SHORTV: 5.2
 
-  - LUA_VER: 5.1.5
-    LUA_SHORTV: 5.1
+  - LUA_VER: 5.3.0
+    LUA_SHORTV: 5.3
 
 
 init:
