--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,11 +16,11 @@ environment:
   - LUA_VER: 5.1.5
     LUA_SHORTV: 5.1
 
-  - LUA_VER: 5.2.4
-    LUA_SHORTV: 5.2
+#  - LUA_VER: 5.2.4
+#    LUA_SHORTV: 5.2
 
-  - LUA_VER: 5.3.0
-    LUA_SHORTV: 5.3
+#  - LUA_VER: 5.3.0
+#    LUA_SHORTV: 5.3
 
 
 init:
