--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,14 @@ environment:
   LUAROCKS_VER: 2.2.1
   LUAROCKS_SHORTV: 2.2
 
+  # if you need to install luarocks to a different directory
+  # If you change this, update 'cache' entry
+  LUAROCKS_INSTALL: C:\Program Files (x86)\LuaRocks
+
+  # External dependencies
+  LR_EXTERNAL: c:\external
+
+
   #LUA: the Lua interpreter. either Lua or LuaJIT
 
   SEVENZIP: 7z
@@ -39,7 +47,22 @@ environment:
     LJ_SHORTV: 2.1
     LUA: luajit
 
+platform:
+  - x86
+  - x64
+
+cache:
+  - c:\lua5.1.5 -> appveyor.yml
+  - c:\lua5.2.4 -> appveyor.yml
+  - c:\lua5.3.0 -> appveyor.yml
+  - c:\lj2.0 -> appveyor.yml
+  - c:\lj2.1 -> appveyor.yml
+  - c:\external -> appveyor.yml
+  - C:\Program Files (x86)\LuaRocks -> appveyor.yml
+  - C:\Program Files\LuaRocks -> appveyor.yml
+
 init:
+# Setup Lua development/build environment
 # Make VS 2013 command line tools available
 - call "C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\vcvarsall.bat" %platform%
 
@@ -62,3 +85,6 @@ test_script:
 - echo "Testing..."
 - cd %APPVEYOR_BUILD_FOLDER%\test
 - tsc.bat test.lua
+
+after_test:
+# @todo
