--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,9 +7,6 @@ shallow_clone: true
 
 environment:
   LUAROCKS_VER: 2.2.1
-
-  # if you need to install luarocks to a different directory, define LUAROCKS_INSTALL and update the 'cache' entry.
-
   matrix:
   - LUA_VER: 5.1.5
   - LUA_VER: 5.2.4
@@ -22,11 +19,7 @@ platform:
   - x64
 
 cache:
-  - c:\lua5.1.5 -> appveyor.yml
-  - c:\lua5.2.4 -> appveyor.yml
-  - c:\lua5.3.0 -> appveyor.yml
-  - c:\lj2.0 -> appveyor.yml
-  - c:\lj2.1 -> appveyor.yml
+  - c:\lua -> appveyor.yml
   - c:\external -> appveyor.yml
   - C:\Program Files (x86)\LuaRocks -> appveyor.yml
   - C:\Program Files\LuaRocks -> appveyor.yml
