--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,9 @@ environment:
   matrix:
   - LUA_VER: 5.1.5
   - LUA_VER: 5.2.4
+  - LUA_VER: 5.2.4, NOCOMPAT: true
   - LUA_VER: 5.3.0
+  - LUA_VER: 5.3.0, NOCOMPAT: true
   - LJ_VER: 2.0.3
   - LJ_VER: 2.1
 
