--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ environment:
   - LUA_VER: 5.3.1  # Lua 5.3.1 with compatibility flags disabled.
     NOCOMPAT: true
   - LJ_VER: 2.0.4
- #- LJ_VER: 2.1 # disabled until the official release
+  - LJ_VER: 2.1
 
 matrix:
   allow_failures:
