--- a/appveyor.yml
+++ b/appveyor.yml
@@ -62,16 +62,23 @@ before_build:
 - echo "Installing external deps"
 
 build_script:
-- luarocks make rockspecs/foo-scm-0.rockspec
+- luarocks make rockspecs/foo-scm-0.rockspec --local
 
 before_test:
 # install test only deps (if not already installed)
-- luarocks show telescope || luarocks install telescope
+- luarocks show busted || luarocks install busted
+- luarocks show luacov || luarocks install luacov
+- luarocks show luacheck || luarocks install luacheck
 
 test_script:
 - echo "Testing..."
-- cd %APPVEYOR_BUILD_FOLDER%\test
-- tsc.bat test.lua
+- luacheck --std max+busted src spec
+- busted --verbose --coverage
 
 after_test:
-# @todo
+  - if "%LUA_VER:~0,3%"=="5.1" (luarocks show bit32 || luarocks install bit32)
+  - luarocks show dkjson || luarocks install dkjson
+  - luarocks show luafilesystem || luarocks install luafilesystem
+  - luarocks show lua-path || luarocks install lua-path
+  - luarocks show luacov-coveralls || luarocks install luacov-coveralls --server=https://luarocks.org/dev --deps-mode=none
+  - luacov-coveralls -v -e c:\lua -c spec\.luacov
